feat: 기존 오류 내역 수정 및 서비스 레이어 JPA 적용